--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Lava Lamp 🪷</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.typekit.net/okd0qro.css">
 </head>
 <body>
   <canvas id="lava"></canvas>
